# how-to-optimize-gemm

./: .gitignore  .gitmodules  LICENSE  README.md  README_ZH_CN.md  deploy_model_on_rasp.py
OpenBLAS-0.2.20/: README.md  cblas.h  common_level3.h  common_macro.h  common_s.h
aarch64/: CMakeLists.txt  MMult1.cpp  MMult_4x4_11.cpp  MMult_4x4_17.cpp  MMult_4x4_18.cpp  MMult_4x4_19.cpp  MMult_4x4_20.cpp  MMult_4x4_21.cpp  copy_matrix.cpp  dclock.cpp  makefile  output_MMult1.m  output_MMult_4x4_10.m  output_MMult_4x4_11.m  output_MMult_4x4_12.m  output_MMult_4x4_14.m  output_MMult_4x4_16.m  output_MMult_4x4_17.m  output_MMult_4x4_18.m  output_MMult_4x4_8.m  output_MMult_4x4_9.m  parameters.h  random_matrix.cpp  test_MMult.cpp
aarch64/gflops_benchmark/: clear.sh
arm/: MMult_4x4_12.c  MMult_4x4_15.c  MMult_4x4_17.c  dclock.c  parameters.h
armv7/: MMult_4x4_20.c  MMult_4x4_21.c  copy_matrix.c  makefile  output_MMult_4x4_21.m  parameters.h  print_matrix.c  random_matrix.c
armv8/: MMult0.cpp  MMult1.c  MMult1.cpp  MMult_4x4_10.c  MMult_4x4_10.cpp  MMult_4x4_12.cpp  MMult_4x4_13.cpp  MMult_4x4_14.cpp  MMult_4x4_15.cpp  MMult_4x4_16.cpp  MMult_4x4_8.cpp  MMult_4x4_9.cpp  REF_MMult.c  REF_MMult.cpp  compare_matrices.cpp  makefile  output_MMult0.m  output_MMult_4x4_10.m  output_MMult_4x4_11.m  output_MMult_4x4_12.m  output_MMult_4x4_13.m  output_MMult_4x4_15.m  output_MMult_4x4_8.m  output_MMult_4x4_9.m  output_new.m  parameters.h  plot.py  print_matrix.cpp  random_matrix.cpp  test_MMult.c  test_MMult.cpp
cuda/: MMult_cuBLAS_1.cpp  MMult_cuBLAS_2.cpp  MMult_cuda_10.cu  (+30 more)
(+106 files in other folders)
